fix accordion acessibility contrast

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -285,7 +285,7 @@ a:hover {
     --bs-accordion-btn-icon-transition: #{$accordion-icon-transition};
     --bs-accordion-btn-active-icon: #{escape-svg($accordion-button-active-icon)}; */
     --bs-accordion-btn-focus-box-shadow: 0;
-    --bs-accordion-active-bg: var(--main-color);
+    --bs-accordion-active-bg: var(--main-color-80);
     --bs-accordion-color: var(--dark-text);
 }
 
